fix for migrate user user id normalization, fix of import of ref result items, fix for password ui width on mobile

--- a/src/main/webapp/netprof.css
+++ b/src/main/webapp/netprof.css
@@ -1154,6 +1154,11 @@ body > .dropdown-popup .nav-list > li.active > a {
     position: absolute;
 }
 
+.resetPageMobile {
+    left: 10%;
+    position: absolute;
+}
+
 .loginPageBack {
     position: fixed;
     width: 200%;
